Updated plugins integration and added build scripts
